--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -46,7 +46,13 @@
         </nz-col>
         <nz-col> </nz-col>
         <nz-col>
-          <div class="center" nz-popover [nzPopoverContent]="centerTpl" nzPopoverPlacement="bottomRight">
+          <div
+            class="center"
+            nz-popover
+            [nzPopoverContent]="centerTpl"
+            nzPopoverPlacement="bottomRight"
+            nzPopoverTrigger="click"
+          >
             <ng-container *ngIf="app.user as u">
               <nz-badge nzDot>
                 <ng-container *ngIf="!!u.avatar; else defaultAvatar">
@@ -77,42 +83,23 @@
   <nz-tabset style="width: 360px" [nzTabBarExtraContent]="actions">
     <ng-template #actions>
       <nz-space>
-        <button *nzSpaceItem nz-button nzType="text" nz-tooltip="简体中文">
-          <i nz-icon nzType="translation"></i>
-        </button>
-        <button *nzSpaceItem nz-button nzType="text" nz-tooltip="个人中心" (click)="profile()">
+        <app-translation *nzSpaceItem [simple]="true"></app-translation>
+        <button *nzSpaceItem nz-button nzType="text" nz-tooltip="Profile" i18n-nz-tooltip (click)="profile()">
           <i nz-icon nzType="user"></i>
         </button>
-        <button *nzSpaceItem nz-button nzType="text" nz-tooltip="退出" (click)="logout()">
+        <button *nzSpaceItem nz-button nzType="text" nz-tooltip="Exit" i18n-nz-tooltip (click)="logout()">
           <i nz-icon nzType="logout"></i>
         </button>
       </nz-space>
     </ng-template>
-    <nz-tab nzTitle="通知(0)">
+    <nz-tab nzTitle="Notification(0)" i18n-nzTitle>
       <nz-list nzItemLayout="horizontal">
         <nz-list-empty></nz-list-empty>
       </nz-list>
     </nz-tab>
-    <nz-tab nzTitle="待办(0)">
+    <nz-tab nzTitle="Todo(0)" i18n-nzTitle>
       <nz-list nzItemLayout="horizontal">
-        <nz-list-item>
-          <nz-list-item-meta>
-            <nz-list-item-meta-title>你收到了14份周报</nz-list-item-meta-title>
-            <nz-list-item-meta-description>1 天前</nz-list-item-meta-description>
-          </nz-list-item-meta>
-        </nz-list-item>
-        <nz-list-item>
-          <nz-list-item-meta>
-            <nz-list-item-meta-title>合同协议已更新</nz-list-item-meta-title>
-            <nz-list-item-meta-description>5 天前</nz-list-item-meta-description>
-          </nz-list-item-meta>
-        </nz-list-item>
-        <nz-list-item>
-          <nz-list-item-meta>
-            <nz-list-item-meta-title>工作内容</nz-list-item-meta-title>
-            <nz-list-item-meta-description>2 周前</nz-list-item-meta-description>
-          </nz-list-item-meta>
-        </nz-list-item>
+        <nz-list-empty></nz-list-empty>
       </nz-list>
     </nz-tab>
   </nz-tabset>
