--- a/src/app/common/translation/translation.component.html
+++ b/src/app/common/translation/translation.component.html
@@ -1,10 +1,18 @@
-<button nzSize="large" nz-button nzType="text" nz-dropdown [nzDropdownMenu]="i18nMenu">
-  <span nz-icon nzType="translation"></span>
-  <span [ngSwitch]="locale">
-    <ng-container *ngSwitchCase="'en-US'">English</ng-container>
-    <ng-container *ngSwitchCase="'zh-CH'">简体中文</ng-container>
-  </span>
-</button>
+<ng-container *ngIf="!simple; else simpleTpl">
+  <button nzSize="large" nz-button nzType="text" nz-dropdown [nzDropdownMenu]="i18nMenu">
+    <span nz-icon nzType="translation"></span>
+    <span [ngSwitch]="locale">
+      <ng-container *ngSwitchCase="'en-US'">English</ng-container>
+      <ng-container *ngSwitchCase="'zh-CH'">简体中文</ng-container>
+    </span>
+  </button>
+</ng-container>
+
+<ng-template #simpleTpl>
+  <button nz-button nzType="text" nz-dropdown [nzDropdownMenu]="i18nMenu">
+    <span nz-icon nzType="translation"></span>
+  </button>
+</ng-template>
 
 <nz-dropdown-menu #i18nMenu="nzDropdownMenu">
   <ul nz-menu>
