--- a/src/app/profile/password/password.component.html
+++ b/src/app/profile/password/password.component.html
@@ -1,19 +1,7 @@
 <form nz-form nzLayout="vertical" id="form" [formGroup]="form" (wpxSubmit)="submit($event)">
   <nz-form-item>
-    <nz-form-label nzRequired> 账户密码 </nz-form-label>
-    <nz-form-control
-      nzHasFeedback
-      [nzAutoTips]="{
-        default: {
-          required: '用户密码不能为空',
-          minlength: '用户密码长度不能小于12位',
-          lowercase: '用户密码必须包含小写字母',
-          uppercase: '用户密码必须包含大写字母',
-          number: '用户密码必须包含数字',
-          symbol: '用户密码必须包含符号(@$!%*?&-+)'
-        }
-      }"
-    >
+    <nz-form-label nzRequired i18n> Password </nz-form-label>
+    <nz-form-control nzHasFeedback [nzAutoTips]="tips.password">
       <nz-input-group [nzSuffix]="suffixTemplate">
         <ng-template #suffixTemplate>
           <i
@@ -27,7 +15,8 @@
           nz-input
           autocomplete="new-password"
           formControlName="password"
-          placeholder="请填写用户密码"
+          placeholder="Please enter password"
+          i18n-placeholder
         />
       </nz-input-group>
     </nz-form-control>
@@ -35,6 +24,6 @@
 </form>
 
 <div *nzModalFooter>
-  <button nz-button type="button" nzType="default" (click)="close()">取消</button>
-  <button nz-button nzType="primary" form="form" [disabled]="!form.valid">提交</button>
+  <button nz-button type="button" nzType="default" (click)="close()" i18n>Cancel</button>
+  <button nz-button nzType="primary" form="form" [disabled]="!form.valid" i18n>Submit</button>
 </div>
