--- a/src/app/profile/backup-email/backup-email.component.html
+++ b/src/app/profile/backup-email/backup-email.component.html
@@ -1,20 +1,13 @@
 <form nz-form nzLayout="vertical" id="form" [formGroup]="form" (wpxSubmit)="submit($event)">
   <nz-form-item>
-    <nz-form-label nzRequired>备用邮箱</nz-form-label>
-    <nz-form-control
-      style="width: 328px"
-      [nzAutoTips]="{
-        default: {
-          email: '请使用正确的电子邮件格式'
-        }
-      }"
-    >
+    <nz-form-label nzRequired i18n>Backup Email</nz-form-label>
+    <nz-form-control style="width: 328px" [nzAutoTips]="tips.email">
       <input type="text" nz-input formControlName="backup_email" placeholder="mail@example.com" />
     </nz-form-control>
   </nz-form-item>
 </form>
 
 <div *nzModalFooter>
-  <button nz-button type="button" nzType="default" (click)="close()">取消</button>
-  <button nz-button nzType="primary" form="form" [disabled]="!form.valid">提交</button>
+  <button nz-button type="button" nzType="default" (click)="close()" i18n>Cancel</button>
+  <button nz-button nzType="primary" form="form" [disabled]="!form.valid" i18n>Submit</button>
 </div>
