--- a/src/app/profile/email/email.component.html
+++ b/src/app/profile/email/email.component.html
@@ -1,15 +1,11 @@
 <form nz-form nzLayout="vertical" id="form" [formGroup]="form" (wpxSubmit)="submit($event)">
   <nz-form-item>
-    <nz-form-label nzRequired>电子邮箱</nz-form-label>
+    <nz-form-label nzRequired i18n>Email</nz-form-label>
     <nz-form-control
       style="width: 328px"
-      nzExtra="*修改后需要重新登录系统"
-      [nzAutoTips]="{
-        default: {
-          email: '请使用正确的电子邮件格式',
-          duplicated: '存在重复的定义，电子邮件必须是唯一的'
-        }
-      }"
+      nzExtra="*Re-login to the system is required after modification"
+      i18n-nzExtra
+      [nzAutoTips]="tips.email"
     >
       <input type="text" nz-input formControlName="email" placeholder="mail@example.com" />
     </nz-form-control>
@@ -17,6 +13,6 @@
 </form>
 
 <div *nzModalFooter>
-  <button nz-button type="button" nzType="default" (click)="close()">取消</button>
-  <button nz-button nzType="primary" form="form" [disabled]="!form.valid">提交</button>
+  <button nz-button type="button" nzType="default" (click)="close()" i18n>Cancel</button>
+  <button nz-button nzType="primary" form="form" [disabled]="!form.valid" i18n>Submit</button>
 </div>
