--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -22,13 +22,13 @@
     </li>
     <li
       nz-menu-item
-      nz-tooltip="Orgs"
+      nz-tooltip="Permissions"
       i18n-nz-tooltip
       nzTooltipPlacement="right"
       nzMatchRouter
       [routerLink]="['/', 'admin', 'orgs']"
     >
-      <span nz-icon nzType="apartment"></span>
+      <span nz-icon nzType="safety"></span>
     </li>
     <li
       nz-menu-item
