--- a/src/app/admin/settings/integrated/cloud/cloud.component.html
+++ b/src/app/admin/settings/integrated/cloud/cloud.component.html
@@ -1,49 +1,142 @@
-<form nz-form nzLayout="vertical" id="form" [formGroup]="form" (wpxSubmit)="submit($event)">
-  <nz-form-item>
-    <nz-form-label nzRequired>服务商</nz-form-label>
-    <nz-form-control>
-      <nz-radio-group formControlName="cloud">
-        <label nz-radio nzValue="tencent">
-          <img height="20px" [src]="['assets', 'cloud', 'tencent.svg'] | wpxAssets" alt="" />
-        </label>
-        <label nz-radio nzValue="aliyun" nzDisabled>
-          <img height="20px" [src]="['assets', 'cloud', 'aliyun.png'] | wpxAssets" alt="" />
-        </label>
-        <label nz-radio nzValue="huaweicloud" nzDisabled>
-          <img height="30px" [src]="['assets', 'cloud', 'huaweicloud.svg'] | wpxAssets" alt="" />
-        </label>
-      </nz-radio-group>
-    </nz-form-control>
-  </nz-form-item>
-  <nz-form-item>
-    <nz-form-label nzRequired>访问密钥 ID</nz-form-label>
-    <nz-form-control
-      nzHasFeedback
-      [nzAutoTips]="{
-        default: {
-          required: '访问密钥 ID 不能为空'
-        }
-      }"
-    >
-      <input nz-input formControlName="tencent_secret_id" placeholder="腾讯云 API 密钥 Id" />
-    </nz-form-control>
-  </nz-form-item>
-  <nz-form-item>
-    <nz-form-label nzRequired>访问密钥</nz-form-label>
-    <nz-form-control
-      nzHasFeedback
-      [nzAutoTips]="{
-        default: {
-          required: '访问密钥不能为空'
-        }
-      }"
-    >
-      <input nz-input formControlName="tencent_secret_key" placeholder="腾讯云 API 密钥 Key" />
-    </nz-form-control>
-  </nz-form-item>
-</form>
+<nz-card>
+  <nz-tabset style="height: 100%" nzTabPosition="left">
+    <nz-tab nzTitle="Tencent Cloud" i18n-nzTitle>
+      <nz-row style="padding-bottom: 12px" nzJustify="space-between">
+        <nz-col>
+          <img style="height: 96px" [src]="['assets', 'Tencent-Cloud.svg'] | wpxAssets" alt="" />
+        </nz-col>
+        <nz-col></nz-col>
+        <nz-col>
+          <nz-switch [nzControl]="true" [ngModel]="values['cloud'] === 'tencent'" (click)="useCloud('tencent')">
+          </nz-switch>
+        </nz-col>
+      </nz-row>
 
-<div *nzModalFooter>
-  <button nz-button type="button" nzType="default" (click)="close()">取消</button>
-  <button nz-button nzType="primary" form="form" [disabled]="!form.valid">提交</button>
-</div>
+      <nz-card nzType="inner" nzTitle="Detail" i18n-nzTitle [nzExtra]="tencentEditTpl">
+        <ng-template #tencentEditTpl>
+          <button nz-button nzType="text" (click)="setTencent()">
+            <span nz-icon nzType="edit"></span>
+          </button>
+        </ng-template>
+        <nz-descriptions nzLayout="vertical">
+          <nz-descriptions-item nzTitle="SecretId">
+            <ng-container *ngIf="values['tencent_secret_id']; else unkown">
+              {{ values['tencent_secret_id'] }}
+            </ng-container>
+          </nz-descriptions-item>
+          <nz-descriptions-item nzTitle="SecretKey">
+            <ng-container *ngIf="values['tencent_secret_key']; else unkown">
+              <span i18n>Already Set</span>
+            </ng-container>
+          </nz-descriptions-item>
+        </nz-descriptions>
+      </nz-card>
+
+      <nz-row style="padding-top: 12px" [nzGutter]="[8, 8]">
+        <nz-col [nzSpan]="12">
+          <nz-card nzType="inner" nzTitle="Object Storage" i18n-nzTitle [nzExtra]="cosEditTpl">
+            <ng-template #cosEditTpl>
+              <button nz-button nzType="text" (click)="setCos()">
+                <span nz-icon nzType="edit"></span>
+              </button>
+            </ng-template>
+            <p i18n>Store static files in COS object storage, and then distribute content through CDN back-to-source</p>
+            <nz-descriptions nzLayout="vertical" [nzColumn]="2">
+              <nz-descriptions-item nzTitle="Bucket Name" i18n-nzTitle>
+                <ng-container *ngIf="values['tencent_cos_bucket']; else unkown">
+                  {{ values['tencent_cos_bucket'] }}
+                </ng-container>
+              </nz-descriptions-item>
+              <nz-descriptions-item nzTitle="Region" i18n-nzTitle>
+                <ng-container *ngIf="values['tencent_cos_region']; else unkown">
+                  {{ values['tencent_cos_region'] }}
+                </ng-container>
+              </nz-descriptions-item>
+              <nz-descriptions-item nzTitle="Pre-signature TTL" i18n-nzTitle>
+                <ng-container *ngIf="values['tencent_cos_expired']; else unkown">
+                  {{ values['tencent_cos_expired'] }}
+                </ng-container>
+              </nz-descriptions-item>
+              <nz-descriptions-item nzTitle="Upload size limit (KB)" i18n-nzTitle>
+                <ng-container *ngIf="values['tencent_cos_limit']; else unkown">
+                  {{ values['tencent_cos_limit'] }}
+                </ng-container>
+              </nz-descriptions-item>
+            </nz-descriptions>
+          </nz-card>
+        </nz-col>
+        <nz-col [nzSpan]="12">
+          <nz-card nzType="inner" nzTitle="Message Queue" i18n-nzTitle [nzExtra]="notYetTpl">
+            <p i18n>Use Tencent Cloud TDMQ Plusar for Transaction Compensation</p>
+            <nz-empty nzNotFoundContent=""></nz-empty>
+          </nz-card>
+        </nz-col>
+        <nz-col [nzSpan]="12">
+          <nz-card nzType="inner" nzTitle="Log System" i18n-nzTitle [nzExtra]="notYetTpl">
+            <p i18n>Use Tencent Cloud CLS log service to collect logs</p>
+            <nz-empty nzNotFoundContent=""></nz-empty>
+          </nz-card>
+        </nz-col>
+      </nz-row>
+    </nz-tab>
+    <nz-tab nzTitle="Alibaba Cloud" i18n-nzTitle>
+      <nz-row style="padding-bottom: 12px" nzJustify="space-between">
+        <nz-col>
+          <img style="height: 80px; padding: 16px 8px" [src]="['assets', 'Alibaba-Cloud.webp'] | wpxAssets" alt="" />
+        </nz-col>
+        <nz-col></nz-col>
+        <nz-col>
+          <nz-switch [nzControl]="true" [ngModel]="values['cloud'] === 'aliyun'" (click)="useCloud('aliyun')">
+          </nz-switch>
+        </nz-col>
+      </nz-row>
+
+      <nz-card nzType="inner" nzTitle="Detail" i18n-nzTitle [nzExtra]="notYetTpl">
+        <nz-empty nzNotFoundContent=""></nz-empty>
+      </nz-card>
+
+      <nz-row style="padding-top: 12px" [nzGutter]="[8, 8]">
+        <nz-col [nzSpan]="12">
+          <nz-card nzType="inner" nzTitle="Object Storage" i18n-nzTitle [nzExtra]="notYetTpl">
+            <p i18n>Store static files in OSS object storage, and then distribute content through CDN back-to-source</p>
+            <nz-empty nzNotFoundContent=""></nz-empty>
+          </nz-card>
+        </nz-col>
+      </nz-row>
+    </nz-tab>
+    <nz-tab nzTitle="Huawei Cloud" i18n-nzTitle>
+      <nz-row style="padding-bottom: 12px" nzJustify="space-between">
+        <nz-col>
+          <img style="height: 80px; padding: 16px 8px" [src]="['assets', 'Huawei-Cloud.png'] | wpxAssets" alt="" />
+        </nz-col>
+        <nz-col></nz-col>
+        <nz-col>
+          <nz-switch nzSize="default" nzDisabled></nz-switch>
+        </nz-col>
+      </nz-row>
+
+      <nz-card nzType="inner" nzTitle="Detail" i18n-nzTitle [nzExtra]="notYetTpl">
+        <nz-empty nzNotFoundContent=""></nz-empty>
+      </nz-card>
+
+      <nz-row style="padding-top: 12px" [nzGutter]="[8, 8]">
+        <nz-col [nzSpan]="12">
+          <nz-card nzType="inner" nzTitle="Object Storage" i18n-nzTitle [nzExtra]="notYetTpl">
+            <p i18n>Store static files in OBS object storage, and then distribute content through CDN back-to-source</p>
+            <nz-empty nzNotFoundContent=""></nz-empty>
+          </nz-card>
+        </nz-col>
+      </nz-row>
+    </nz-tab>
+  </nz-tabset>
+</nz-card>
+
+<ng-template #unkown>
+  <span i18n>Not Set</span>
+</ng-template>
+
+<ng-template #notYetTpl>
+  <button nz-button nzType="text" disabled>
+    <span nz-icon nzType="edit"></span>
+  </button>
+</ng-template>
