--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -44,7 +44,7 @@
 
     <nz-divider nzPlain nzText="OR" i18n-nzText></nz-divider>
     <nz-space>
-      <a *nzSpaceItem nz-tooltip="FeiShu" i18n-nz-tooltip (click)="feishuOAuth()">
+      <a *nzSpaceItem nz-tooltip="Feishu" i18n-nz-tooltip (click)="feishuOAuth()">
         <nz-avatar [nzSize]="30" nzShape="square" [nzSrc]="['assets', 'lark.svg'] | wpxAssets"></nz-avatar>
       </a>
     </nz-space>
