--- a/src/app/admin/settings/security/security.component.html
+++ b/src/app/admin/settings/security/security.component.html
@@ -79,6 +79,7 @@
     </nz-tab>
     <nz-tab nzTitle="IP 白名单">
       <nz-table
+        nzSize="default"
         style="width: 800px"
         #whitelist
         [nzData]="values['ip_whitelist']"
@@ -102,6 +103,7 @@
     </nz-tab>
     <nz-tab nzTitle="IP 黑名单">
       <nz-table
+        nzSize="default"
         style="width: 800px"
         #blacklist
         [nzData]="values['ip_blacklist']"
