--- a/src/app/admin/settings/access-logs/access-logs.component.html
+++ b/src/app/admin/settings/access-logs/access-logs.component.html
@@ -9,10 +9,10 @@
       (ngModelChange)="getData(true)"
     ></nz-range-picker>
     <nz-button-group *nzSpaceItem>
-      <button nz-button nzType="text" nz-tooltip="刷新" (click)="getData(true)">
+      <button nz-button nzType="text" nz-tooltip="Refresh" (click)="getData(true)">
         <i nz-icon nzType="reload"></i>
       </button>
-      <button nz-button nzType="text" nz-tooltip="重置" (click)="clearSearch()">
+      <button nz-button nzType="text" nz-tooltip="Reset" (click)="clearSearch()">
         <i nz-icon nzType="clear"></i>
       </button>
     </nz-button-group>
@@ -21,7 +21,7 @@
 
 <ng-template #actions>
   <nz-space>
-    <button *nzSpaceItem nz-button> 导出 </button>
+    <button *nzSpaceItem nz-button> Export </button>
   </nz-space>
 </ng-template>
 
