--- a/src/app/admin/settings/settings.component.html
+++ b/src/app/admin/settings/settings.component.html
@@ -17,29 +17,29 @@
           </li>
         </ul>
       </li>
-      <li nz-menu-group nzTitle="Security" i18n-nzTitle>
+      <li nz-menu-group nzTitle="System" i18n-nzTitle>
         <ul>
-          <li nz-menu-item nzMatchRouter [routerLink]="['/', 'admin', 'settings', 'security', 'basic']">
-            <span nz-icon nzType="form"></span>
-            <span i18n>Basic Strategy</span>
+          <li nz-menu-item nzMatchRouter [routerLink]="['/', 'admin', 'settings', 'system', 'security']">
+            <span nz-icon nzType="safety"></span>
+            <span i18n>Security</span>
           </li>
-          <li nz-menu-item nzMatchRouter [routerLink]="['/', 'admin', 'settings', 'security', 'whitelist']">
-            <span nz-icon nzType="check"></span>
-            <span i18n>Whitelist</span>
+          <li nz-menu-item nzMatchRouter [routerLink]="['/', 'admin', 'settings', 'system', 'sessions']">
+            <span nz-icon nzType="rocket"></span>
+            <span i18n>Sessions</span>
           </li>
-          <li nz-menu-item nzMatchRouter [routerLink]="['/', 'admin', 'settings', 'security', 'blacklist']">
-            <span nz-icon nzType="stop"></span>
-            <span i18n>Blacklist</span>
+          <li nz-menu-item nzMatchRouter [routerLink]="['/', 'admin', 'settings', 'system', 'values']">
+            <span nz-icon nzType="control"></span>
+            <span i18n>Values</span>
           </li>
         </ul>
       </li>
       <li nz-menu-group nzTitle="Aduit" i18n-nzTitle>
         <ul>
-          <li nz-menu-item nzMatchRouter [routerLink]="['/', 'admin', 'settings', 'audit', 'login']">
+          <li nz-menu-item nzMatchRouter [routerLink]="['/', 'admin', 'settings', 'audit', 'login_logs']">
             <span nz-icon nzType="audit"></span>
             <span i18n>Login Logs</span>
           </li>
-          <li nz-menu-item nzMatchRouter [routerLink]="['/', 'admin', 'settings', 'audit', 'access']">
+          <li nz-menu-item nzMatchRouter [routerLink]="['/', 'admin', 'settings', 'audit', 'access_logs']">
             <span nz-icon nzType="history"></span>
             <span i18n>Access Logs</span>
           </li>
