--- a/src/app/admin/settings/values/values.component.html
+++ b/src/app/admin/settings/values/values.component.html
@@ -1,13 +1,20 @@
 <ng-template #searchRef>
   <nz-space>
     <nz-input-group *nzSpaceItem style="width: 180px" nzSuffixIcon="search">
-      <input [(ngModel)]="searchText" (keyup.enter)="getData()" type="text" nz-input placeholder="键名搜索" />
+      <input
+        [(ngModel)]="searchText"
+        (keyup.enter)="getData()"
+        type="text"
+        nz-input
+        placeholder="Search"
+        i18n-placeholder
+      />
     </nz-input-group>
     <nz-button-group *nzSpaceItem>
-      <button nz-button nzType="text" nz-tooltip="刷新" (click)="getData()">
+      <button nz-button nzType="text" nz-tooltip="Refresh" i18n-nz-tooltip (click)="getData()">
         <i nz-icon nzType="reload"></i>
       </button>
-      <button nz-button nzType="text" nz-tooltip="重置" (click)="clearSearch()">
+      <button nz-button nzType="text" nz-tooltip="Reset" i18n-nz-tooltip (click)="clearSearch()">
         <i nz-icon nzType="clear"></i>
       </button>
     </nz-button-group>
@@ -16,7 +23,7 @@
 
 <ng-template #actions>
   <nz-space>
-    <button *nzSpaceItem nz-button nzType="primary" (click)="form()"> 新增 </button>
+    <button *nzSpaceItem nz-button nzType="primary" (click)="form()" i18n> Add </button>
   </nz-space>
 </ng-template>
 
@@ -33,9 +40,9 @@
           (nzCheckedChange)="setNChecked($event)"
         >
         </th>
-        <th nzWidth="320px"><b>键名</b></th>
-        <th><b>键值</b></th>
-        <th nzWidth="60px" nzRight>
+        <th nzWidth="320px"><b i18n>Key</b></th>
+        <th><b i18n>Value</b></th>
+        <th nzWidth="60px" nzRight nzAlign="center">
           <button nz-button nzType="text" nzBlock disabled>
             <i nz-icon nzType="setting"></i>
           </button>
@@ -49,14 +56,14 @@
         <td>
           <code>{{ data.value }}</code>
         </td>
-        <td nzRight>
+        <td nzRight nzAlign="center">
           <button nz-button nzType="text" nz-dropdown [nzDropdownMenu]="actions">
             <i nz-icon nzType="ellipsis"></i>
           </button>
           <nz-dropdown-menu #actions="nzDropdownMenu">
             <ul nz-menu>
-              <li nz-menu-item (click)="form(data)">编辑</li>
-              <li nz-menu-item nzDanger (click)="delete(data.key)">删除</li>
+              <li nz-menu-item (click)="form(data)" i18n>Edit</li>
+              <li nz-menu-item nzDanger (click)="delete(data.key)" i18n>Delete</li>
             </ul>
           </nz-dropdown-menu>
         </td>
